# Kyrsovik

./: CMakeCache.txt  CMakeLists.txt  Calc.cpp  Calc.hpp  Node.cpp  Node.hpp  Parser.cpp  Parser.hpp  README.md  Scanner.cpp  Scanner.hpp  SimpleCalculus.pro  SimpleCalculus_ru_RU.ts  Storage.cpp  Storage.hpp  SymbolTable.cpp  SymbolTable.hpp  actionlayout.cpp  actionlayout.h  controllayout.cpp  controllayout.h  input.cpp  input.h  main.cpp  mainwindow.cpp  mainwindow.h  myExcept.h  mylayout.cpp  mylayout.h  staticparse.cpp  staticparse.h  statuslayout.cpp  statuslayout.h
